syntax = "proto3";

package user;

service UserService {
	rpc CreateUser(User)returns(Response){}
	rpc GetUserByName(Request)returns(Response){}
}

message User{
	string id = 1;
    string name = 2;
    string pwd = 3;
    uint64 createdTime = 4;
    uint64 updatedTime = 5;
}
message Error {
    int32 code = 1;
    string detail = 2;
}

message Request {
    string userID = 1;
    string userName = 2;
    string userPwd = 3;
}

message Response {
    bool success = 1;
    Error error = 2;
    User user = 3;
}
